trying to fix overflow on x

--- a/src/styles/LinkInBio.module.css
+++ b/src/styles/LinkInBio.module.css
@@ -15,7 +15,7 @@ div.LinkInBio {
     width: 100%;
 
     img {
-      max-width: 16rem;
+      max-width: 10rem;
       max-height: auto;
     }
   }
